--- a/alurabooks/index.html
+++ b/alurabooks/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AluraBooks</title>
+<link rel="stylesheet" href="styles.css">
+</head>
 <h1>alura books</h1>
-    </head>
+    
 
     <body>
     <h1>alura books</h1>    
